--- a/style.css
+++ b/style.css
@@ -31,13 +31,283 @@
 .pinks {
     color: #f96ec6;
 }
-@media screen and (width: 1024){
+@media screen and (max-width: 1024px){
+    .graph img{
+        width: 100%;
+        position: relative;
+        z-index: -1;
+        margin: -5rem 0 -5rem !important;
+    }
+    .section {
+        display: block;
+        padding: 14px 0 72px !important;
+    }
+    .chart-one,
+    .chart-two {
+        /* display: block; */
+        width: auto !important;
+        height: auto !important;
+    }
+    #chartOne,
+    #chartTwo {
+        width: 270px !important;
+        height: 270px !important;
+    }
     .chart-container {
         display: flex;
+        flex-direction: column !important;
+        justify-content: center !important;
+        margin-bottom: 60px;
+    }
+    .sale-charts {
+        display: flex;
+        flex-direction: column !important;
+    }
+    .chart-row {
+        display: flex;
+        flex-direction: row;
+        justify-content: center !important;
+    }
+    .chart-title {
+        margin: 0 auto !important;
+        text-align: center !important;
+        min-width: 400px !important;
+    }
+    .chart-title h5 {
+        display: flex;
         flex-direction: column;
-        justify-content: space-around;
+        order: 0;
+        width: 300px !important;
+        text-align: center !important;
+        align-items: center !important;
+        margin: 0 auto;
+        padding-bottom: 24px !important;
+
+    }
+    .chart-row * {
+        margin: 0 24px;
+    }
+    /*NEWS*/
+    .news-container {
+        display: flex;
+        flex-direction: column !important;
+        flex-wrap: wrap;
+        align-items: center;
+        margin: 0 auto !important;
+    }
+    .news-item-container {
+        width: 100% !important;
+        /* max-width: 50%; */
+        text-align: center !important;
+        height: auto !important;
+    }
+    /*FAQ*/
+    .faq-content {
+        display: flex;
+        flex-direction: column !important;
+        flex-wrap: wrap;
+        justify-content: center;
+        align-items: center;
+    }
+    .faq-content .question {
+        width: 100% !important;
+        max-width: 50%;
+        text-align: center !important;
+        height: 174px;
+        margin-bottom: 16px;
+    }
+    .faq-container .title-text {
+        margin: 0 auto !important;
+        max-width: 70% !important;
+        padding: 0 0 24px;
+        font-weight: 300;
+        font-size: 18px;
     }
 }
+@media screen and (max-width: 768px){
+    .graph img{
+        width: 100%;
+        position: relative;
+        z-index: -1;
+        margin: -3rem 0 -3rem !important;
+    }
+    .section {
+        display: block;
+        padding: 14px 0 72px !important;
+    }
+    .chart-one,
+    .chart-two {
+        /* display: block; */
+        width: auto !important;
+        height: auto !important;
+    }
+    #chartOne,
+    #chartTwo {
+        width: 270px !important;
+        height: 270px !important;
+    }
+    .chart-container {
+        display: flex;
+        flex-direction: column !important;
+        justify-content: center !important;
+        margin-bottom: 60px;
+    }
+    .sale-charts {
+        display: flex;
+        flex-direction: column !important;
+    }
+    .chart-row {
+        display: flex;
+        flex-direction: row;
+        justify-content: center !important;
+    }
+    .chart-title {
+        margin: 0 auto !important;
+        text-align: center !important;
+        min-width: 400px !important;
+    }
+    .chart-title h5 {
+        display: flex;
+        flex-direction: column;
+        order: 0;
+        width: 300px !important;
+        text-align: center !important;
+        align-items: center !important;
+        margin: 0 auto;
+        padding-bottom: 24px !important;
+
+    }
+    .chart-row * {
+        margin: 0 24px;
+    }
+    /*NEWS*/
+    .news-container {
+        display: flex;
+        flex-direction: column !important;
+        flex-wrap: wrap;
+        align-items: center;
+        margin: 0 auto !important;
+    }
+    .news-item {
+        padding: 0 0 !important;
+    }
+    .news-item-container {
+        width: 100% !important;
+        /* max-width: 50%; */
+        text-align: center !important;
+        height: auto !important;
+    }
+    /*FAQ*/
+    .faq-content {
+        display: flex;
+        flex-direction: column !important;
+        flex-wrap: wrap;
+        justify-content: center;
+        align-items: center;
+    }
+    .faq-content .question {
+        width: 100% !important;
+        /* max-width: 50%; */
+        text-align: center !important;
+        height: auto !important;
+        margin-bottom: 16px;
+    }
+    .faq-container .title-text {
+        margin: 0 auto !important;
+        max-width: 100% !important;
+        padding: 0 0 24px;
+        font-weight: 300;
+        font-size: 18px;
+    }
+    .token-sale-content {
+        display: flex;
+        flex-direction: column !important;
+        align-items: center;
+        justify-content: center;
+    }
+    /*FEATURES*/
+    .features-content {
+        display: flex;
+        flex-direction: column;
+    }
+    .feature-item {
+        width: 100% !important;
+    }
+    /*WHY SECTION*/
+    .why-content {
+        display: flex;
+        flex-direction: column-reverse;
+        align-items: center;
+        justify-content: center !important;
+    }
+    .why-content h1 {
+        text-align: right !important;
+        font-size: 2.5rem;
+        margin: 0 auto !important;
+    }
+    .why-content .btn-container,
+    .why-content h6 {
+        text-align: center !important;
+    }
+    .trusted .logo-container {
+        display: flex;
+        flex-direction: column ;
+        flex-wrap: wrap;
+        /* justify-content: space-evenly; */
+        /* margin: 48px 0 0; */
+        /* align-items: center !important; */
+    }
+    /*TEAM*/
+    .team-container {
+        display: flex;
+        flex-direction: column !important;
+        justify-content: center;
+        /* text-align: center; */
+    }
+    .team-container .person img {
+        padding: 0 0 !important;
+    }
+    .team-container .person {
+        margin-bottom: 48px;
+    }
+    .footer-content {
+        display: block !important;
+    }
+    .footer .left {
+        display: block;
+        width: auto !important;
+    }
+    .footer .mid,
+    .footer .right {
+        display: inline-block !important;
+        width: 40% !important;
+    }
+    .footer .right {
+        position: relative;
+        top: -160px;
+    }
+    .links {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: nowrap !important;
+        justify-content: flex-start !important;
+    }
+    .footer-nav a,
+    .footer-links a {
+        padding-bottom: 12px !important;
+        width: auto !important;
+    }
+    .footer-links {
+        padding-top: 0 !important;
+        margin-right: 0 !important;
+        margin: 0 18px;
+    }
+    .copyright {
+        margin: -160px 0 48px !important;
+    }
+}
+
+
 html {
     line-height: 1.15;
 }
@@ -231,11 +501,8 @@ h6 {
     display: block;
     padding: 32px 0 128px;
 }
-.features-block {
-    display: block;
-    padding-top: 32px;
-    padding-bottom: 128px;
-    text-align: center;
+.features-content {
+    display: flex;
 }
 .feature-item {
     display: inline-block;
@@ -254,7 +521,7 @@ h6 {
     max-width: 340px;
     margin: 0 auto;
 }
-.features-block h2 {
+.features h2 {
     color: #505FC7;
     font-weight: 400;
     margin: 0 0 8px;
@@ -275,9 +542,11 @@ h6 {
 }
 *.mini-title:after {
     width: 125px;
+    order: 1;
 }
 *.max-title:after {
     width: 250px;
+    order: 1;
 }
 /*  */
 .token-sale {
@@ -286,7 +555,6 @@ h6 {
     text-align: center;
     padding: 32px 0 128px;
 }
-
 .progress-area {
     display: flex;
     margin: 5rem 0;
@@ -318,12 +586,15 @@ h6 {
     max-width: 650px;
     font-size: 1.2rem;
 }
+.token-sale-content {
+    text-align: center;
+}
 .token-sale-item {
     display: inline-block;
     width: 380px;
     flex-grow: 1;
     text-align: center;
-    padding: 0 15px;
+    padding: 0 0 48px;
 }
 .token-sale-item h6 {
     color: #FF78CB;
@@ -334,7 +605,7 @@ h6 {
     font-size: 2.4rem;
     font-weight: 300;
     line-height: 1.2;
-    padding: 0 0 48px;
+    /* padding: 0 0 48px; */
 }
 .token-sale-content {
     display: flex;
@@ -366,16 +637,16 @@ h6 {
     width: 270px !important;
     height: 270px !important;
 }
+.chart-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+}
 .sale-charts {
     display: flex;
     flex-direction: row;
     justify-content: space-around;
     margin: 48px 0 0;
-}
-.chart-container {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
 }
 .chart-row {
     display: flex;
@@ -384,14 +655,22 @@ h6 {
 }
 .chart-title {
     text-align: left;
+    padding-left: 16px;
     margin-bottom: 32px;
-    padding-left: 12px;
 }
-.chart-top-text h5:after {
+.chart-title h5 {
+    display: flex;
+    flex-direction: column;
+    order: 0;
+    width: 50%;
+    text-align: left;
+}
+.chart-title h5:after {
     content: "";
     order: 1;
     background: linear-gradient(to right, #e874bf, #a462c3);
     height: 2px;
+    width: 125px;
 }
 .chart-legend {
     text-align: left;
@@ -411,9 +690,6 @@ h6 {
     margin-bottom: -2px
 }
 /*  */
-.why-section {
-    padding: 32px 0 128px;
-}
 .why-content {
     margin-top: 3rem !important;
     display: flex;
@@ -479,6 +755,7 @@ h6 {
 }
 .news-item {
     margin: 3rem 0 1.5rem;
+    padding-left: 2rem;
 }
 .news-item h6 {
     margin: 0 0 8px;
@@ -487,7 +764,7 @@ h6 {
     margin: 0 0 24px;
 }
 .news .btn-container {
-    margin-top: 48px;
+    margin-top: 32px;
 }
 /*  */
 .customers .section-title {
@@ -553,10 +830,11 @@ h6 {
 }
 /*  */
 .section.roadmap {
-    padding: 32px 0 96px !important;
+    /* padding: 32px 0 96px !important; */
+    padding-bottom: 48px;
 }
 .roadmap .text-center {
-    margin: 0 230px 16px;
+    margin: 0 auto 16px;
     padding: 16px;
     font-size: 18px;
     font-weight: 300;
@@ -662,7 +940,7 @@ h6 {
 /*  */
 .faq-container .title-text {
     margin: 0 230px 16px;
-    padding: 16px;
+    padding: 0 0 24px;
     font-weight: 300;
     font-size: 18px;
 }
@@ -714,7 +992,7 @@ h6 {
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
-    height: 200px;
+    height: auto;
 }
 .footer-nav a,
 .footer-links a {
