--- a/style.css
+++ b/style.css
@@ -784,7 +784,7 @@ h6 {
     height: 125px;
     border-radius: 50%;
     margin: 0 auto;
-    background-image: url(/images/happyface.webp);
+    background-image: url(BestCoin/images/happyface.webp);
     background-size: cover;
     background-position: center;
 }
