--- a/style.css
+++ b/style.css
@@ -90,6 +90,13 @@
     .chart-row * {
         margin: 0 24px;
     }
+    /*TRUSTED BY*/
+    .trusted .logo-container {
+        display: flex !important;
+        flex-direction: row;
+        flex-wrap: wrap;
+        flex: 1 !important;
+    }
     /*NEWS*/
     .news-container {
         display: flex;
@@ -104,6 +111,12 @@
         text-align: center !important;
         height: auto !important;
     }
+    /*TEAM*/
+    .team-container {
+        display: flex;
+        flex: 1 0 0 !important;
+        flex-wrap: wrap;
+    }
     /*FAQ*/
     .faq-content {
         display: flex;
@@ -111,13 +124,22 @@
         flex-wrap: wrap;
         justify-content: center;
         align-items: center;
+        gap: 2rem;
+        padding-bottom: 1rem;
     }
     .faq-content .question {
-        width: 100% !important;
-        max-width: 50%;
-        text-align: center !important;
-        height: 174px;
+        /* width: 100% !important; */
+        max-width: 100%;
+        height: auto !important;
         margin-bottom: 16px;
+        text-align: left !important;
+    }
+    .faq-content .question .q-title {
+        text-align: center !important;
+        margin-bottom: 1rem;
+        font-size: 2rem;
+        font-weight: 200;
+        line-height: 1.4;
     }
     .faq-container .title-text {
         margin: 0 auto !important;
@@ -125,6 +147,9 @@
         padding: 0 0 24px;
         font-weight: 300;
         font-size: 18px;
+    }
+    .footer-text {
+        max-width: 90%
     }
 }
 @media screen and (max-width: 768px){
@@ -161,8 +186,10 @@
     }
     .chart-row {
         display: flex;
-        flex-direction: row;
+        flex-direction: column !important;
         justify-content: center !important;
+        gap: 2rem;
+        align-items: center;
     }
     .chart-title {
         margin: 0 auto !important;
@@ -194,10 +221,14 @@
     .news-item {
         padding: 0 0 !important;
     }
+    .news-item h6 {
+        display: flex;
+        min-width: 300px;
+        justify-content: left;
+    }
     .news-item-container {
         width: 100% !important;
-        /* max-width: 50%; */
-        text-align: center !important;
+        text-align: left !important;
         height: auto !important;
     }
     /*FAQ*/
@@ -219,7 +250,7 @@
         margin: 0 auto !important;
         max-width: 100% !important;
         padding: 0 0 24px;
-        font-weight: 300;
+        font-weight: 400 !important;
         font-size: 18px;
     }
     .token-sale-content {
@@ -247,6 +278,7 @@
         text-align: right !important;
         font-size: 2.5rem;
         margin: 0 auto !important;
+        margin-bottom: 1rem !important;
     }
     .why-content .btn-container,
     .why-content h6 {
@@ -407,10 +439,50 @@ h6 {
 .nav-features {
     color:#FF78CB !important;
 }
-.nav-signup {
-    /* margin-left: 40px; */
+/* dropdown */
+.hidden {
+    display: none;
+}
+.show {
+    display: block;
+}
+.dropbtn {
     font-weight: 700 !important;
     color: #FF78CB !important;
+}
+.menu-list {
+    overflow: hidden;
+}
+.dropdown {
+    float: left;
+    overflow: hidden;
+    margin: 0 auto;
+    width: 160px;
+}
+.dropdown-content {
+    display: none;
+    position: absolute;
+    /* margin-top: 10px; */
+    z-index: 1;
+    min-width: 160px;
+}
+.dropdown-content a {
+    float: none;
+    display: block;
+    padding: 12px 16px;
+    margin: 6px 0;
+    border-bottom: 1px solid #e9ebf8;
+    text-align: center;
+    color:#505FC7
+}
+.dropdown-content a:hover {
+    color: #ff78cb;
+}
+.dropdown-content a:last-child {
+    border-bottom: none;
+}
+.dropdown:hover .dropdown-content {
+    display: block;
 }
 /* main-hero */
 .hero {
@@ -957,6 +1029,10 @@ h6 {
     text-align: left;
     height: 174px;
 }
+.faq-content .question h2 {
+    font-weight: 300;
+    font-size: 2rem;
+}
 /*  */
 .footer {
     background-color: #f8f9fd;
@@ -992,16 +1068,13 @@ h6 {
 .footer-links {
     display: flex;
     flex-direction: column;
+    flex: 1;
     flex-wrap: wrap;
-    height: auto;
+    /* height: auto; */
 }
 .footer-nav a,
 .footer-links a {
     padding-bottom: 16px;
-}
-.footer-links {
-    padding-top: 12px;
-    margin-right: 40px;
 }
 .copyright {
     margin: 0 0 48px;
