--- a/style.css
+++ b/style.css
@@ -34,12 +34,64 @@
 .pinks {
     color: #f96ec6;
 }
+@media screen and (max-width: 1200px) {
+    .open-text {
+        font-size: 7rem !important;
+        font-weight: 600;
+        width: 100% !important;
+        margin: 0 auto;
+    }
+}
+@media screen and (max-width: 1600px) {
+    .open-text {
+        font-size: 8rem !important;
+        font-weight: 600;
+        width: 100% !important;
+        margin: 0 auto;
+    }
+}
+@media screen and (max-width: 1800px) {
+    .open-text {
+        font-size: 9rem !important;
+        font-weight: 600;
+        width: 100% !important;
+        margin: 0 auto;
+    }
+}
+@media screen and (max-width: 900px) {
+    .menu-body {
+        display: none !important;
+    }
+    .dropdown:hover .dropdown-menu {
+        display: block;
+    }
+    .dropdown:hover .dropdown-content {
+        display: none !important;
+    }
+    .dropdown-menu .menu-list {
+        display: flex;
+        flex-direction: row;
+        align-items: flex-end;
+        position: absolute;
+        right: 2rem !important;
+        height: 4rem;
+        
+    }
+    .dropdown-menu .menu-list li {
+        text-align: left;
+    }
+}
 @media screen and (max-width: 1024px){
     .header-content {
         text-align: center !important;
     }
     .menu-list li{
-        margin: 2rem 0.8rem !important;
+        margin: 0 0.8rem !important;
+    }
+    /*hero*/
+    .open-text {
+        font-size: 5rem !important;
+        font-weight: 600;
     }
     .graph img{
         width: 100%;
@@ -86,6 +138,7 @@
         height: auto !important;
         margin: 0 auto;
         text-align: center;
+        padding-bottom: 2rem !important;
     }
     .token-sale-item h3{
         padding: 0 0.3rem;
@@ -191,18 +244,6 @@
     .header-content .menu-body {
         display: none !important;
     }
-    .dropdown:hover .dropdown-menu {
-        display: block;
-    }
-    .dropdown:hover .dropdown-content {
-        display: none !important;
-    }
-    .dropdown-menu .menu-list {
-        display: flex;
-        flex-direction: row;
-        position: absolute;
-        right: 1rem !important;
-    }
     .graph img{
         width: 100%;
         position: relative;
@@ -240,6 +281,9 @@
         flex-direction: column !important;
         align-items: center;
         justify-content: center;
+    }
+    .token-sale-item {
+        padding-bottom: 3rem;
     }
     .chart-row {
         display: flex;
@@ -319,12 +363,22 @@
     /*WHY SECTION*/
     .why-content {
         display: flex;
-        flex-direction: column-reverse;
+        flex-direction: column;
         align-items: center;
         justify-content: center !important;
     }
+    .why-content .img-container {
+        display: none;
+    }
+    .why-content .btn-container,
+    .why-content .btn-container a {
+        margin: 0 !important;
+    }
+    .why-content .btn-container a {
+        margin: 1rem 0 !important;
+    }
     .why-content h1 {
-        text-align: right !important;
+        text-align: center !important;
         font-size: 2.5rem;
         margin: 0 auto !important;
         margin-bottom: 1rem !important;
@@ -338,12 +392,15 @@
         flex-direction: column ;
         flex-wrap: wrap;
     }
+    /*ROADMAP*/
+    .roadmap {
+        padding: 1rem 0 3rem !important;
+    }
     /*TEAM*/
     .team-container {
         display: flex;
         flex-direction: column !important;
-        justify-content: center;
-        /* text-align: center; */
+        align-items: center;
     }
     .team-container .person img {
         padding: 0 0 !important;
@@ -352,39 +409,50 @@
         margin-bottom: 48px;
     }
     .footer-content {
-        display: block !important;
-    }
-    .footer .left {
-        display: block;
-        width: auto !important;
+        display: flex !important;
+        flex-direction: row;
+        flex-wrap: wrap;
+        flex-basis: 100% !important;
+        justify-content: space-around !important;
     }
     .footer .mid,
-    .footer .right {
-        display: inline-block !important;
-        width: 40% !important;
+    .footer .right,
+    .footer .left {
+        margin: 0 !important;
     }
-    .footer .right {
-        position: relative;
-        top: -160px;
+    .footer .left {
+        order: 1;
+        width: 100% !important;
+        padding-bottom: 2rem;
+        text-align: center;
     }
+    .footer .footer-text{
+        margin: auto !important;
+        padding: 0 !important;
+    }
+    .footer .right,
+    .footer .mid {
+        order: 2;
+        width: 50% !important;
+    }
+
     .links {
         display: flex;
-        flex-direction: row;
-        flex-wrap: nowrap !important;
+        flex-direction: row !important;
+        /* flex-wrap: nowrap !important; */
         justify-content: flex-start !important;
     }
     .footer-nav a,
     .footer-links a {
-        padding-bottom: 12px !important;
+        /* padding-bottom: 12px !important; */
         width: auto !important;
     }
     .footer-links {
         padding-top: 0 !important;
-        margin-right: 0 !important;
-        margin: 0 18px;
+        margin: 0 0 !important;
     }
     .copyright {
-        margin: -160px 0 48px !important;
+        margin: 2rem 0 3rem !important;
     }
 }
 html {
@@ -454,12 +522,12 @@ h6 {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin: 0 3rem;
+    margin: 0 3%;
 }
 .header-content {
     display: flex;
     align-items: center;
-    font-size: 1.15rem;
+    font-size: 1rem;
 }
 .logo {
     font-size: 2.4rem;
@@ -483,11 +551,11 @@ h6 {
 }
 .menu-list li {
     text-align: center;
-    margin: 2rem 0.8rem;
+    margin: 0 0.8rem;
 }
 .menu-list a {
     text-decoration: none;
-    /* font-size: 1.2rem; */
+    font-size: 1.1rem;
     font-weight: 400;
     color:#505FC7;
 }
@@ -502,27 +570,28 @@ h6 {
     font-weight: 700 !important;
     color: #FF78CB !important;
 }
-.menu-list {
+.small-menu-wrapper {
     overflow: hidden;
 }
 .dropdown {
     float: left;
     overflow: hidden;
-    margin: 2rem auto;
+    /* margin: 2rem 0; */
     width: 120px;
-    text-align: center;
+    display: flex;
+    justify-content: center;
 }
 .dropdown-content {
     display: none;
     position: absolute;
-    /* margin-top: 10px; */
+    margin-top: 1.25rem;
     z-index: 1;
     min-width: 120px;
 }
 .dropdown-content a {
     float: none;
     display: block;
-    padding: 12px 16px;
+    padding: 0.4rem 1rem;
     margin: 6px 0;
     border-bottom: 1px solid #e9ebf8;
     text-align: center;
@@ -543,15 +612,22 @@ h6 {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    margin-top: 80px;
+    margin-top: 4.4rem;
 }
 .hero-title {
     padding-bottom: 8px;
+    width: 88%;
+    word-wrap: none !important;
+    margin: 0 auto;
+}
+.open-text {
+    font-size: 12rem;
+    font-weight: 600;
 }
 .hero-description {
     font-weight: 300;
-    font-size: 1.2rem;
-    max-width: 550px;
+    font-size: 1.6rem;
+    max-width: 45rem;
     text-align: center;
     padding: 16px 0;
     margin: 0 auto !important;
@@ -570,11 +646,11 @@ h6 {
 .btn-primary {
     display: inline-block;
     border: 0;
-    font-size: 1rem;
+    font-size: 1.4rem;
     font-weight: 400;
     color: #fff;
-    padding: 8px 28px;
-    margin-top: 16px;
+    padding: 1rem 4rem;
+    margin-top: 1rem;
     background: linear-gradient(90deg, #ff78cb, #d3409f);
 }
 .btn img {
@@ -603,6 +679,7 @@ h6 {
     max-width: 650px;
     display: inline-block;
     margin-bottom: 80px;
+    margin-top: 1rem;
 }
 .info-text {
     margin: 0 -0 24px;
@@ -629,6 +706,7 @@ h6 {
 }
 .features-content {
     display: flex;
+    justify-content: center;
 }
 .feature-item {
     display: inline-block;
@@ -851,12 +929,12 @@ h6 {
 }
 .trusted .logo-container {
     display: flex;
-    justify-content: space-around;
+    justify-content: center;
     margin: 48px 0 0;
     align-items: center !important;
 }
 .logo-container .logo {
-    padding: 0 24px;
+    margin: 1rem 1rem;
     text-align: center;
 }
 /*  */
