--- a/style.css
+++ b/style.css
@@ -78,7 +78,6 @@
     }
     .section {
         display: block;
-        padding: 14px 0 72px !important;
     }
     /*FEATURE*/
     .features-content {
@@ -253,7 +252,6 @@
     }
     .section {
         display: block;
-        padding: 14px 0 72px !important;
     }
     /*CHART*/
     .chart-one,
@@ -662,7 +660,6 @@ h6 {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    margin-top: 4.4rem;
 }
 .hero-title {
     padding-bottom: 8px;
@@ -752,7 +749,7 @@ h6 {
 /*  */
 .section {
     display: block;
-    padding: 32px 0 128px;
+    padding: 3rem 0 8rem;
 }
 .features-content {
     display: flex;
@@ -807,7 +804,7 @@ h6 {
     display: block;
     background-color: #f8f9fd;
     text-align: center;
-    padding: 32px 0 128px;
+    padding: 3rem 0 5rem;
 }
 .progress-area {
     display: flex;
